@@ -1,5 +1,6 @@
 New in version 2.0.0
-
+ 
+Plot of the shear anisotropy for cubic systems. 
 
 14/02/2024 Version 1.9.1 is now frozen
 New in version 1.9.1
